--- a/app/less/style.css
+++ b/app/less/style.css
@@ -416,13 +416,38 @@ body {
   line-height: 125%;
   color: #454545;
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
   padding: 20px;
 }
 .container {
   width: 60%;
   margin: 80px auto;
+}
+@keyframes loadanim {
+  from {
+    background: green;
+  }
+  30% {
+    background: gray;
+  }
+  70% {
+    background: red;
+  }
+  to {
+    background: green;
+  }
+}
+span[class*='error_'] {
+  color: red;
+}
+.loader {
+  height: 20px;
+  width: 20px;
+  display: block;
+  animation: loadanim 2s infinite ease-in-out;
+  display: none;
+}
+.loader.show {
+  display: block;
 }
 .fields {
   border-top: 1px solid #ddd;
