--- a/app/less/style.less
+++ b/app/less/style.less
@@ -27,14 +27,35 @@ textarea:focus {
 body {
     .text_standart;
     min-height: 100vh;
-    display: flex;
-    justify-content: center;
     padding: 20px;
 }
 
 .container{
     width: 60%;
     margin: 80px auto;
+}
+
+@keyframes loadanim {
+    from {background: green}
+    30%{background: gray}
+    70%{background: red}
+    to {background: green}
+}
+
+span[class*='error_']{
+    color: red;
+}
+
+
+.loader{
+    height: 20px;
+    width: 20px;
+    display: block;
+    animation: loadanim  2s infinite ease-in-out;
+    display: none;
+    &.show{
+        display: block;
+    }
 }
  
 
